# harpocrates

./: .drone.yml  .gitignore  Pipfile  README.md  Sample_more.csv  TEST1.csv  body.html  body.txt  config.example.yml  config.yml  main.py  more_body.txt  more_grades.py  pyproject.toml  pyrightconfig.json  sample.csv  subject.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
harpocrates/: __main__.py  import_test.py  main.py
harpocrates/config/: __init__.py  config.py
harpocrates/importer/: __init__.py  importer.py  importer_test.py
harpocrates/model/: __init__.py  student.py
